# dut-fire-detect

./: .gitignore  Cargo.toml  Dockerfile  app.py  app.spec  build.rs  fire-detect.spec  pyproject.toml  requirements.darwin.txt  requirements.txt  ruff.toml  setup.py
.github/workflows/: docker-publish.yml  pyinstaller.yaml  rust.yaml
dut_fire_detect/: __main__.py  data.py  file.py  main.py  model.py
scripts/: fire-detect.sh
src/: data.rs  main.rs  session.rs
