[package]
name = "dut-fire-detect"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
image = "0.25.2"
ndarray = "0.15.0"
zip = "2.1.6"
ort = "2.0.0-rc.4"
opencv = "0.92.2"

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
